--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "gravatar": "^1.3.0",
     "jade": "~1.11.0",
     "mongodb": "^2.0.42",
     "morgan": "~1.6.1",
