--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.11.3",
     "gravatar": "^1.3.0",
     "jade": "~1.11.0",
+    "moment": "^2.10.6",
     "mongodb": "^2.0.42",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
